--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "define-data-property": "^1.1.4",
     "depd": "^2.0.0",
     "destroy": "^1.2.0",
+    "dotenv": "^16.4.5",
     "ecdsa-sig-formatter": "^1.0.11",
     "ee-first": "^1.1.1",
     "ejs": "^3.1.10",
@@ -51,6 +52,7 @@
     "iconv-lite": "^0.4.24",
     "inherits": "^2.0.4",
     "ipaddr.js": "^1.9.1",
+    "jsonwebtoken": "^9.0.2",
     "jwa": "^2.0.0",
     "jws": "^4.0.0",
     "media-typer": "^0.3.0",
@@ -62,6 +64,8 @@
     "minimalistic-assert": "^1.0.1",
     "minimist": "^1.2.8",
     "ms": "^2.0.0",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.10.2",
     "nanoid": "^3.3.7",
     "negotiator": "^0.6.3",
     "node-fetch": "^2.7.0",
