--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "agent-base": "^7.1.1",
     "array-flatten": "^1.1.1",
     "asn1.js": "^5.4.1",
+    "bcryptjs": "^2.4.3",
     "bn.js": "^4.12.0",
     "body-parser": "^1.20.2",
     "bootstrap": "^5.3.3",
