storing device information

--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "type-is": "^1.6.18",
     "unpipe": "^1.0.0",
     "utils-merge": "^1.0.1",
+    "uuid": "^10.0.0",
     "vary": "^1.1.2",
     "web-push": "^3.6.7",
     "webidl-conversions": "^3.0.1",
