--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "express-async-errors": "^3.1.1",
     "express-handlebars": "^7.1.3",
     "express-useragent": "^1.0.15",
+    "express-validator": "^7.1.0",
     "express-ws": "^5.0.2",
     "finalhandler": "^1.2.0",
     "forwarded": "^0.2.0",
