--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "nanoid": "^3.3.7",
     "negotiator": "^0.6.3",
     "node-fetch": "^2.7.0",
+    "nodemailer": "^6.9.14",
     "object-inspect": "^1.13.2",
     "on-finished": "^2.4.1",
     "parseurl": "^1.3.3",
